# tree-sitter

./: .gitattributes  .gitignore  Cargo.toml  flake.nix  grammars.nix  readme.md  shell.nix  test.nix
nix/: default.nix  generate.lua  generated.json  generated.nix  grammar.nix  meta.json  meta.toml  nixpkgs.nix  nvfetcher.toml  nvim.nix  packages.nix  test.json  tree-sitter.nix  ts.toml
nix/grammars/: generate.lua  generated.json  generated.nix  grammar.nix  install.py  meta.json  nvfetcher.toml  nvim-grammar.nix
nix/ts/: generated.json
src/: dl.rs  main.rs  ts.rs
test/: NavBar.astro  bash.sh  tex.tex  typescript.js
tree-sitter-cat/: Cargo.toml
tree-sitter-cat/src/: main.rs  terminal.toml
tree-sitter-dynamic/: Cargo.toml
tree-sitter-dynamic/src/: detect.rs  lib.rs  main.rs  modeline.rs  path.rs
