[package]
name = "tree-sitter-cat"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.11", features = ["derive"] }
eyre = "0.6.12"
html-escape = "0.2.13"
itertools = "0.13.0"
tree-sitter-dynamic = { version = "0.1.0", path = "../tree-sitter-dynamic" }
tree-sitter-highlight = "0.22.6"
