[package]
name = "tree-sitter-cat"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.11", features = ["derive"] }
color-eyre = "0.6.3"
eyre = "0.6.12"
magic = "0.16.2"
serde = { version = "1.0.204", features = ["derive"] }
toml = "0.8.19"
tree-sitter-dynamic = { version = "0.1.0", path = "../tree-sitter-dynamic" }
tree-sitter-highlight = "0.22.6"
