[package]
name = "tree-sitter-dynamic"
version = "0.1.0"
edition = "2021"

[dependencies]
eyre = "0.6.12"
libc = "0.2.155"
libloading = "0.8.4"
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
serde_with = "3.9.0"
tree-sitter = "0.22.6"
tree-sitter-highlight = "0.22.6"

[build-dependencies]
cc = "*"
